Apache SIS Change Log
======================

Release 0.3-incubating - Current Development

* SIS-44 Update the 'demo.jsp' file in the SIS webapp to use an 
  open source maps API (Ross Laidlaw via mattmann)

* SIS-41 Improve the demo.jsp CSS (Charitha Madusanka via mattmann)

* SIS-40 Add the missing documentation comments for SIS 
  WS layer (Charitha Madusanka via mattmann)

* SIS-38 Add the missing documentation comments for SIS-core 
  storage (Charitha Madusanka via mattmann)

Release 0.2-incubating - 03/08/2012

* SIS-30 Added Jetty Server to sis-webapp/pom.xml. To run, cd to sis-webapp/ and run [mvn jetty:run]
  (aestrada)

* SIS-27 Update sis-parent/pom.xml compile target to 1.6 (pjaol via mattmann)

* SIS-29 Website must display disclaimer text (mattmann, sebb)

* SIS-26 Use of Java 1.6 Annotation in 
  /sis-core/src/main/java/org/apache/sis/storage/GeoRSSData.java (Fabian Christ via mattmann)

* SIS-25 Location servlet doesn't return correct coordinates for point-radius query region (nchung)

Release 0.1-incubating - 11/09/2010

* SIS-24 Refactor sis.version into build process flowdown through Maven and 
  rename to 0.1-incubating (mattmann)

* SIS-23 Brand demo.jsp with ApacheSIS TM logo (mattmann)

* SIS-22 Error obtaining geodata RSS causes Qtree index to not be written (mattmann)

* SIS-21 Path to location service shouldn't include prefix slash (mattmann)

* SIS-20 Make the qTreeIdxPath and geodata paths configurable 
  properties (mattmann)

* SIS-19 QTreeWriter and GeoRSSData.save don't check to make sure 
  the directory exists before creating data there (mattmann)

* SIS-18 demo JSP has incorrect form get action set (mattmann)

* SIS-17 Context params need override set to false (mattmann)

* SIS-16 SIS location service is configured incorrectly (mattmann)

* SIS-12 Write basic SIS documentation for CLI and for WS layer (mattmann)

* SIS-14 Use LatLon class instead of plain double points in QuadTreeData interface (greddin, mattmann)
